--- a/notebooks/2.Class_initialisation.ipynb
+++ b/notebooks/2.Class_initialisation.ipynb
@@ -31,8 +31,10 @@
     "class Cell:\n",
     "    def concentration_difference(self):\n",
     "        return self.A_concentration - self.I_concentration\n",
-    "    \n",
-    "    def __init__(self, A_concentration, I_concentration, position=[None, None]):\n",
+    "\n",
+    "    def __init__(\n",
+    "        self, A_concentration, I_concentration, position=[None, None]\n",
+    "    ):\n",
     "        print(\"__init__ called\")\n",
     "        self.A_concentration = A_concentration\n",
     "        self.I_concentration = I_concentration\n",
@@ -89,16 +91,20 @@
    "source": [
     "class Cell:\n",
     "    def __str__(self):\n",
-    "        out = ('I am a cell with:\\n'\n",
-    "               f'\\ta concentration of A: {self.A_concentration}\\n'\n",
-    "               f'\\ta concentration of I: {self.I_concentration}\\n'\n",
-    "               f'\\tPosition            : {self.position}\\n')\n",
+    "        out = (\n",
+    "            \"I am a cell with:\\n\"\n",
+    "            f\"\\ta concentration of A: {self.A_concentration}\\n\"\n",
+    "            f\"\\ta concentration of I: {self.I_concentration}\\n\"\n",
+    "            f\"\\tPosition            : {self.position}\\n\"\n",
+    "        )\n",
     "        return out\n",
-    "    \n",
+    "\n",
     "    def concentration_difference(self):\n",
     "        return self.A_concentration - self.I_concentration\n",
-    "    \n",
-    "    def __init__(self, A_concentration, I_concentration, position=[None, None]):\n",
+    "\n",
+    "    def __init__(\n",
+    "        self, A_concentration, I_concentration, position=[None, None]\n",
+    "    ):\n",
     "        self.A_concentration = A_concentration\n",
     "        self.I_concentration = I_concentration\n",
     "        self.position = position"
