--- a/notebooks/3.GameOfLife.ipynb
+++ b/notebooks/3.GameOfLife.ipynb
@@ -36,8 +36,8 @@
    "outputs": [],
    "source": [
     "a = 1\n",
-    "a += 1 # a = a + 1\n",
-    "a *= 2 # a = a * 2\n",
+    "a += 1  # a = a + 1\n",
+    "a *= 2  # a = a * 2\n",
     "# | # bitwise or\n",
     "print(f\"{3 | 4 = }\")\n",
     "# 4 = 1 0 0 ; 3 = 0 1 1\n",
@@ -101,10 +101,10 @@
     "arr = arr.reshape(3, 2, 2)\n",
     "# -> [[[ 0  1]\n",
     "#      [ 2  3]]\n",
-    "#      \n",
+    "#\n",
     "#     [[ 4  5]\n",
     "#      [ 6  7]]\n",
-    "#      \n",
+    "#\n",
     "#     [[ 8  9]\n",
     "#      [10 11]]]\n",
     "\n",
@@ -132,10 +132,10 @@
     "arr = arr[2:5, :-3, ::2]\n",
     "# -> [[[40 42]\n",
     "#      [44 46]]\n",
-    "#    \n",
+    "#\n",
     "#     [[60 62]\n",
     "#      [64 66]]\n",
-    "#    \n",
+    "#\n",
     "#     [[80 82]\n",
     "#      [84 86]]]\n",
     "\n",
@@ -154,16 +154,16 @@
     "\n",
     "# -> [[[ 3  3]\n",
     "#      [ 3  3]]\n",
-    "#   \n",
+    "#\n",
     "#     [[ 4  5]\n",
     "#      [-1  7]]\n",
-    "#   \n",
+    "#\n",
     "#     [[ 3  3]\n",
     "#      [ 3  3]]\n",
-    "#   \n",
+    "#\n",
     "#     [[10 10]\n",
     "#      [10 10]]\n",
-    "#   \n",
+    "#\n",
     "#     [[ 3  3]\n",
     "#      [ 3  3]]]"
    ]
@@ -184,7 +184,7 @@
     "arr = np.arange(200)\n",
     "arr = arr.reshape(10, 5, -1)\n",
     "\n",
-    "mask = arr%3==1\n",
+    "mask = arr % 3 == 1\n",
     "# -> mask[i] == True where the rest of the whole division of arr[i] by 3 is 1.\n",
     "\n",
     "# masking the original array, returns a view on the orginal array where mask is True.\n",
@@ -194,8 +194,8 @@
     "#     109 112 115 118 121 124 127 130 133 136 139 142 145 148 151 154 157 160\n",
     "#     163 166 169 172 175 178 181 184 187 190 193 196 199]\n",
     "\n",
-    "# Setting all values where the mask is true to 0 in the table \n",
-    "arr[mask] = 0\n"
+    "# Setting all values where the mask is true to 0 in the table\n",
+    "arr[mask] = 0"
    ]
   },
   {
@@ -217,7 +217,7 @@
     "## adding/substracting/multiplying/... a scalar to all cell of the array:\n",
     "arr1 = arr + 1\n",
     "arr2 = arr * 2\n",
-    "arr3 = arr ** 3\n",
+    "arr3 = arr**3\n",
     "arr4 = arr // 3\n",
     "\n",
     "## pairwise addition/multiplication/... between arrays\n",
@@ -296,13 +296,10 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "\n",
     "class GameOfLife:\n",
     "    # That Kernel defines how to count the number of neighbors\n",
-    "    kernel = np.array([\n",
-    "        [1, 1, 1],\n",
-    "        [1, 0, 1],\n",
-    "        [1, 1, 1]\n",
-    "    ])\n",
+    "    kernel = np.array([[1, 1, 1], [1, 0, 1], [1, 1, 1]])\n",
     "    boundary = \"wrap\"\n",
     "\n",
     "    def iterations(self, nb_iter=1):\n",
@@ -315,17 +312,24 @@
     "        for _ in range(nb_iter):\n",
     "            # Counting the neighbors\n",
     "            # Changing the boundary parameter will change the behavior of the game of life.\n",
-    "            nb_neighbs = convolve2d(self.current_state, self.kernel, boundary=self.boundary, mode='same')\n",
-    "            \n",
+    "            nb_neighbs = convolve2d(\n",
+    "                self.current_state,\n",
+    "                self.kernel,\n",
+    "                boundary=self.boundary,\n",
+    "                mode=\"same\",\n",
+    "            )\n",
+    "\n",
     "            # Checking the rules:\n",
     "            #   Any live cell with two or three live neighbours survives.\n",
-    "            new_live  = ((nb_neighbs == 3) | (nb_neighbs == 2)) & self.current_state\n",
-    "            \n",
+    "            new_live = (\n",
+    "                (nb_neighbs == 3) | (nb_neighbs == 2)\n",
+    "            ) & self.current_state\n",
+    "\n",
     "            #   Any dead cell with three live neighbours becomes a live cell.\n",
-    "            new_live |= ((nb_neighbs == 3) & (~self.current_state))\n",
+    "            new_live |= (nb_neighbs == 3) & (~self.current_state)\n",
     "            #   All other live cells die in the next generation. Similarly, all other dead cells stay dead.\n",
     "            self.current_state = new_live\n",
-    "    \n",
+    "\n",
     "    def plot(self):\n",
     "        \"\"\"\n",
     "        Plot the current state of the automaton\n",
@@ -335,7 +339,7 @@
     "        else:\n",
     "            image = self\n",
     "        fig, ax = plt.subplots()\n",
-    "        ax.imshow(image, interpolation='nearest', cmap=\"gray\")\n",
+    "        ax.imshow(image, interpolation=\"nearest\", cmap=\"gray\")\n",
     "        ax.set_xticks([])\n",
     "        ax.set_yticks([])\n",
     "        fig.tight_layout()\n",
@@ -361,8 +365,9 @@
     "        [0, 1, 0, 1, 0, 0],\n",
     "        [1, 0, 0, 0, 0, 0],\n",
     "        [0, 1, 0, 0, 1, 0],\n",
-    "        [0, 0, 0, 1, 1, 1]\n",
-    "    ], dtype=int\n",
+    "        [0, 0, 0, 1, 1, 1],\n",
+    "    ],\n",
+    "    dtype=int,\n",
     ")\n",
     "GameOfLife.plot(init_state)"
    ]
@@ -375,7 +380,9 @@
    "source": [
     "size = 100\n",
     "init_state_large = np.zeros((size, size), dtype=bool)\n",
-    "init_state_large[size//2-2:size//2+2, size//2-3:size//2+3] = init_state\n",
+    "init_state_large[\n",
+    "    size // 2 - 2 : size // 2 + 2, size // 2 - 3 : size // 2 + 3\n",
+    "] = init_state\n",
     "game_of_life = GameOfLife(init_state_large, boundary=\"wrap\")\n",
     "game_of_life.plot()"
    ]
@@ -398,6 +405,7 @@
    "source": [
     "class GameOfLifeGeneral(GameOfLife):\n",
     "    __current_iter = 0\n",
+    "\n",
     "    def iterations(self, nb_iter=1):\n",
     "        \"\"\"\n",
     "        Run one iteration of the automaton and update the current state with its new value\n",
@@ -407,27 +415,44 @@
     "        \"\"\"\n",
     "        for _ in range(nb_iter):\n",
     "            # Counting the number of neighbors\n",
-    "            # Changing the boundary parameter will \n",
-    "            nb_neighbs = convolve2d(self.current_state!=0, self.kernel, boundary=self.boundary, mode='same')\n",
-    "            \n",
+    "            # Changing the boundary parameter will\n",
+    "            nb_neighbs = convolve2d(\n",
+    "                self.current_state != 0,\n",
+    "                self.kernel,\n",
+    "                boundary=self.boundary,\n",
+    "                mode=\"same\",\n",
+    "            )\n",
+    "\n",
     "            new_live = np.zeros_like(nb_neighbs, dtype=bool)\n",
     "            # Checking the rules:\n",
     "            #   Any live cell with `th` live neighbours survives.\n",
     "            for th in self.th_live:\n",
-    "                new_live |= (nb_neighbs == th) & (self.current_state!=0)\n",
+    "                new_live |= (nb_neighbs == th) & (self.current_state != 0)\n",
     "            #   Any dead cell with `th` live neighbours becomes a live cell.\n",
     "            for th in self.th_dead:\n",
-    "                new_live |= (nb_neighbs == th) & (self.current_state==0)\n",
+    "                new_live |= (nb_neighbs == th) & (self.current_state == 0)\n",
     "            #   All other live cells die in the next generation. Similarly, all other dead cells stay dead.\n",
     "            self.__current_iter += 1\n",
     "            if self.keep_track:\n",
-    "                self.current_state[new_live & (self.current_state==0)] = self.__current_iter\n",
+    "                self.current_state[\n",
+    "                    new_live & (self.current_state == 0)\n",
+    "                ] = self.__current_iter\n",
     "                self.current_state[~new_live] = 0\n",
     "            else:\n",
     "                self.current_state = new_live\n",
     "\n",
-    "    def __init__(self, initial_state, boundary=None, th_live=[2, 3], th_dead=[3], keep_track=False, kernel=None):\n",
-    "        super().__init__(initial_state.astype(int), boundary=boundary, kernel=kernel)\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        initial_state,\n",
+    "        boundary=None,\n",
+    "        th_live=[2, 3],\n",
+    "        th_dead=[3],\n",
+    "        keep_track=False,\n",
+    "        kernel=None,\n",
+    "    ):\n",
+    "        super().__init__(\n",
+    "            initial_state.astype(int), boundary=boundary, kernel=kernel\n",
+    "        )\n",
     "        if not hasattr(th_live, \"__iter__\"):\n",
     "            th_live = [th_live]\n",
     "        if not hasattr(th_dead, \"__iter__\"):\n",
@@ -445,8 +470,12 @@
    "source": [
     "size = 10\n",
     "init_state_large = np.zeros((size, size), dtype=bool)\n",
-    "init_state_large[size//3-2:size//3+2, size//3-3:size//3+3] = init_state\n",
-    "game_of_life2 = GameOfLifeGeneral(init_state_large, th_live=[1, 2, 3, 4, 5], th_dead=[3], boundary=\"wrap\")\n",
+    "init_state_large[\n",
+    "    size // 3 - 2 : size // 3 + 2, size // 3 - 3 : size // 3 + 3\n",
+    "] = init_state\n",
+    "game_of_life2 = GameOfLifeGeneral(\n",
+    "    init_state_large, th_live=[1, 2, 3, 4, 5], th_dead=[3], boundary=\"wrap\"\n",
+    ")\n",
     "game_of_life2.plot()"
    ]
   },
@@ -478,16 +507,24 @@
    "source": [
     "size = 300\n",
     "init_state_large = np.zeros((size, size), dtype=bool)\n",
-    "init_state_large[size//3-2:size//3+2, size//3-3:size//3+3] = init_state\n",
+    "init_state_large[\n",
+    "    size // 3 - 2 : size // 3 + 2, size // 3 - 3 : size // 3 + 3\n",
+    "] = init_state\n",
     "\n",
     "total_iter = 700\n",
     "nb_tp = 100\n",
-    "incr = total_iter//nb_tp\n",
-    "game_of_life2 = GameOfLifeGeneral(init_state_large, th_live=[1, 2, 3, 4, 5], th_dead=[3], boundary=\"wrap\", keep_track=True)\n",
+    "incr = total_iter // nb_tp\n",
+    "game_of_life2 = GameOfLifeGeneral(\n",
+    "    init_state_large,\n",
+    "    th_live=[1, 2, 3, 4, 5],\n",
+    "    th_dead=[3],\n",
+    "    boundary=\"wrap\",\n",
+    "    keep_track=True,\n",
+    ")\n",
     "output = np.zeros(init_state_large.shape + (nb_tp,), dtype=\"uint16\")\n",
     "for i in range(nb_tp):\n",
     "    output[..., i] = game_of_life2.current_state\n",
-    "    game_of_life2.iterations(incr)\n"
+    "    game_of_life2.iterations(incr)"
    ]
   },
   {
@@ -499,7 +536,8 @@
     "## Need to have installed imageio for that part:\n",
     "## `pip install imageio`\n",
     "from imageio import mimsave\n",
-    "mimsave(\"tmp.gif\", (output.T//3).astype(\"uint8\"), duration=.05)"
+    "\n",
+    "mimsave(\"tmp.gif\", (output.T // 3).astype(\"uint8\"), duration=0.05)"
    ]
   },
   {
@@ -522,7 +560,8 @@
    "outputs": [],
    "source": [
     "from tifffile import imwrite\n",
-    "imwrite('Maze_colour.tif', output.T//3)"
+    "\n",
+    "imwrite(\"Maze_colour.tif\", output.T // 3)"
    ]
   },
   {
