--- a/notebooks/1.Classes.ipynb
+++ b/notebooks/1.Classes.ipynb
@@ -70,25 +70,25 @@
     "\n",
     "# Their concentration in activator:\n",
     "A_concentration = {\n",
-    "    0: .1,\n",
-    "    1: .2,\n",
-    "    4: .1,\n",
-    "    5: .3,\n",
+    "    0: 0.1,\n",
+    "    1: 0.2,\n",
+    "    4: 0.1,\n",
+    "    5: 0.3,\n",
     "}\n",
     "\n",
     "# Their concentration in inhibitor:\n",
     "I_concentration = {\n",
-    "    0: .3,\n",
-    "    1: .6,\n",
-    "    2: .2,\n",
-    "    3: .1,\n",
+    "    0: 0.3,\n",
+    "    1: 0.6,\n",
+    "    2: 0.2,\n",
+    "    3: 0.1,\n",
     "}\n",
     "\n",
     "position = {\n",
     "    0: [1, 2],\n",
     "    1: [2, 5],\n",
     "    2: [0, 2],\n",
-    "    3: [3, 1],   \n",
+    "    3: [3, 1],\n",
     "}"
    ]
   },
@@ -107,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_id = 0 # looking at the cell that has the id 0\n",
+    "cell_id = 0  # looking at the cell that has the id 0\n",
     "print(f\"Activator concentration of cell {cell_id}: {A_concentration[cell_id]}\")\n",
     "print(f\"Inhibitor concentration of cell {cell_id}: {I_concentration[cell_id]}\")\n",
     "print(f\"Position of cell {cell_id}: {position[cell_id]}\")"
@@ -128,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_cells.append(4) # Adding the cell with id 4\n",
+    "all_cells.append(4)  # Adding the cell with id 4\n",
     "A_concentration[4] = 10\n",
     "I_concentration[4] = 50\n",
     "position[4] = [2, 1]"
@@ -214,11 +214,12 @@
    "outputs": [],
    "source": [
     "class Cell:\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    <statment-1>\n",
     "    ...\n",
     "    <statment-n>\n",
-    "    '''\n",
+    "    \"\"\"\n",
+    "\n",
     "    ..."
    ]
   },
@@ -286,9 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "class Cell:\n",
-    "\n",
     "    def concentration_difference(self):\n",
     "        return self.A_concentration - self.I_concentration"
    ]
@@ -333,7 +332,7 @@
     "try:\n",
     "    c.concentration_difference()\n",
     "except Exception as e:\n",
-    "    print('the error was the following:')\n",
+    "    print(\"the error was the following:\")\n",
     "    print(e)"
    ]
   },
@@ -355,14 +354,17 @@
     "class Cell:\n",
     "    def concentration_difference(self):\n",
     "        # Checking if the attributes do exist\n",
-    "        if hasattr(self, 'A_concentration') and hasattr(self, 'I_concentration'):\n",
+    "        if hasattr(self, \"A_concentration\") and hasattr(\n",
+    "            self, \"I_concentration\"\n",
+    "        ):\n",
     "            return self.A_concentration - self.I_concentration\n",
     "        else:\n",
     "            # Sometimes it is better to let the error there to avoid\n",
     "            # unseen errors. One way around it is to have warnings\n",
     "            # though it is not great.\n",
     "            import warnings\n",
-    "            warnings.warn('At least one concentration is missing, returning 0')\n",
+    "\n",
+    "            warnings.warn(\"At least one concentration is missing, returning 0\")\n",
     "            return 0"
    ]
   },
@@ -424,7 +426,9 @@
    "outputs": [],
    "source": [
     "curr_cell = 1\n",
-    "concentration_difference(A_concentration[curr_cell], I_concentration[curr_cell])"
+    "concentration_difference(\n",
+    "    A_concentration[curr_cell], I_concentration[curr_cell]\n",
+    ")"
    ]
   },
   {
