--- a/notebooks/6.Modeling_diffusion.ipynb
+++ b/notebooks/6.Modeling_diffusion.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "As previously, we will start with simpler examples by reducing our space to 1 dimension and by not having diffusion.\n",
     "\n",
-    "So the first exercice is to write a `class` that models interdependant activator and inhibitor concentrations as before but for a row of cells (so 1 dimension) instead of just one single cell.\n",
+    "So the first exercice is to write a `class` that models interdependent activator and inhibitor concentrations as before but for a row of cells (so 1 dimension) instead of just one single cell.\n",
     "\n",
     "To do so we will use a `ndarray` with 2 dimensions: one for space and one for time.\n",
     "\n",
@@ -82,19 +82,19 @@
     "\n",
     "Now, the question is: how do we model $\\nabla\\bullet$??\n",
     "\n",
-    "Well, the idea is that a given cell, at a position $x$ recieves, via diffusion, content from its direct neighbouring cells at positions $x-\\delta x$ and $x + \\delta x$.\n",
+    "Well, the idea is that a given cell, at a position $x$ receives, via diffusion, content from its direct neighbouring cells at positions $x-\\delta x$ and $x + \\delta x$.\n",
     "\n",
     "That same cell gives content, also via diffusion, to the same neighbours at positions $x-\\delta x$ and $x + \\delta x$.\n",
     "\n",
-    "How much a cell recieves from its neighbours is modulated by the parameters $\\mu_a$ for the activator and $\\mu_i$ for the inhibitor. $\\mu_a=0$ means that there is no diffusion for the activator, $\\mu_a=1$ means that the cells give all their content to their neighbours and a $\\mu_a=0.25$ means that the cells give $25\\%$ of their content to their neighbourhing cells.\n",
+    "How much a cell receives from its neighbours is modulated by the parameters $\\mu_a$ for the activator and $\\mu_i$ for the inhibitor. $\\mu_a=0$ means that there is no diffusion for the activator, $\\mu_a=1$ means that the cells give all their content to their neighbours and a $\\mu_a=0.25$ means that the cells give $25\\%$ of their content to their neighbourhing cells.\n",
     "\n",
-    "⚠️One has to be careful though, since $\\mu_a$ models how much a cell give to **1** of its neighbors, if $\\mu_a*\\#neighbs>1$ then the cell will diffuse more than it has, which is physically not possible.⚠️\n",
+    "⚠️ One has to be careful though, since $\\mu_a$ models how much a cell give to **1** of its neighbors, if $\\mu_a*\\#neighbs>1$ then the cell will diffuse more than it has, which is physically not possible.⚠️\n",
     "\n",
     "That being said, we can now model $\\nabla a$ diffusion as follow:\n",
     "$$\n",
     "\\nabla a = \\frac{a_{x-\\delta x, t} + a_{x+\\delta x, t} - 2a_{x, t}}{\\delta x}\n",
     "$$\n",
-    "And so the change of concetration due to diffusion for a cell at the position $x$ at time $t$ becomes:\n",
+    "And so the change of concentration due to diffusion for a cell at the position $x$ at time $t$ becomes:\n",
     "$$\n",
     "\\frac{\\delta a_{x, t}}{\\delta t} = \\mu_a . \\frac{a_{x-\\delta x, t} + a_{x+\\delta x, t} - 2a_{x, t}}{\\delta x}\n",
     "$$\n",
@@ -144,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a fuction that takes as an input `A[t]` and returns `A[t+1]`.\n",
+    "Write a function that takes as an input `A[t]` and returns `A[t+1]`.\n",
     "\n",
     "Remember that `A[t]` is a 1 dimensional `np.ndarray`: `A[t].shape = (nb_cells, )`"
    ]
@@ -200,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**If you are strugling (it is not easy) you can try to seperate diffusion from reaction**\n",
+    "**If you are struggling (it is not easy) you can try to separate diffusion from reaction**\n",
     "\n",
     "In other words we are trying to implement the following equations:\n",
     "\n",
@@ -237,7 +237,7 @@
    "source": [
     "Now that we know how to code a model in 1D over time, we can go directly to 2D 😨\n",
     "\n",
-    "That being said, we will use the 2D convolution seen before to our advantage. Indeed, in the diffusion each cell recieve activator and inhibitor from its neighbours and give back to its neighbours.\n",
+    "That being said, we will use the 2D convolution seen before to our advantage. Indeed, in the diffusion each cell receive activator and inhibitor from its neighbours and give back to its neighbours.\n",
     "\n",
     "So the diffusions can be computed as follow:\n",
     "$$\n",
@@ -278,7 +278,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sandbox",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -292,9 +292,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.12"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
