--- a/notebooks/0.Functions.ipynb
+++ b/notebooks/0.Functions.ipynb
@@ -402,7 +402,7 @@
     "- `end=\"c\"`\n",
     "- `sep=\"d`\n",
     "\n",
-    "hence the ouput\n",
+    "hence the output\n",
     "\n",
     "`'adbdedfdgdc'`"
    ]
@@ -485,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
