--- a/notebooks/1.Classes.ipynb
+++ b/notebooks/1.Classes.ipynb
@@ -141,7 +141,7 @@
    "source": [
     "This is of course error prone ...\n",
     "\n",
-    "Another (as error prone as the previous one) way might be like that by creating a dictionnary of dictionaries:"
+    "Another (as error prone as the previous one) way might be like that by creating a dictionary of dictionaries:"
    ]
   },
   {
@@ -456,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
