--- a/notebooks/3.GameOfLife.ipynb
+++ b/notebooks/3.GameOfLife.ipynb
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`np.ndarray`s are `n` dimentional arrays that are very effictient to manipulate.\n",
+    "`np.ndarray`s are `n` dimensional arrays that are very efficient to manipulate.\n",
     "\n",
     "It can be worth remembering some of their properties:"
    ]
@@ -250,9 +250,9 @@
     "A continuous convolution between two function $f$ and $g$ can generally be characterised mathematically as follow:\n",
     "$$ (f\\ast g)(x) = \\int_{-\\infty}^{\\infty} f(x-\\tau) . g(\\tau)d\\tau$$\n",
     "\n",
-    "In our specific case, we are more intereseted in discrete convolution between a bounded 2D image $I$ and a bounded 2D kernel $K$ of size $N\\times M$.\n",
+    "In our specific case, we are more interested in discrete convolution between a bounded 2D image $I$ and a bounded 2D kernel $K$ of size $N\\times M$.\n",
     "\n",
-    "In that case the equation can be writen as follow:\n",
+    "In that case the equation can be written as follow:\n",
     "$$\n",
     "(I\\ast K)(x, y) = \\sum_{i=-\\left\\lfloor\\frac{N}{2}\\right\\rfloor}^{\\left\\lfloor\\frac{N}{2}\\right\\rfloor}\n",
     "\\sum_{j=-\\left\\lfloor\\frac{M}{2}\\right\\rfloor}^{\\left\\lfloor\\frac{M}{2}\\right\\rfloor} I(x+i,y+j).K(i, j)\n",
@@ -574,7 +574,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sandbox",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -588,9 +588,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.12"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
