--- a/notebooks/4.Preparing_Turing.ipynb
+++ b/notebooks/4.Preparing_Turing.ipynb
@@ -13,7 +13,7 @@
     "It is this interaction and diffusion that we will model in this course. We will also learn how to graphically represent these patterns.\n",
     "\n",
     "A little bit of knowledge about how to model these interactions is necessary to better understand the remainder of the course.\n",
-    "First, we will be talking about an activator that will name $A$ and an inhibitor that will name $I$. Their concentration values will be refered to as $a$ and $i$ respectively.\n",
+    "First, we will be talking about an activator that will name $A$ and an inhibitor that will name $I$. Their concentration values will be referred to as $a$ and $i$ respectively.\n",
     "\n",
     "The gene regulation network that we are considering here is the simple one where $A$ auto-activates and activates $I$ and $I$ inhibits $A$:\n",
     "\n",
@@ -27,7 +27,7 @@
     "\n",
     "$I \\dashv A$ ($I$ inhibits $A$)\n",
     "\n",
-    "These interactions can be modelled multiple ways.\n",
+    "These interactions can be modeled multiple ways.\n",
     "We decided here to use the [FitzHugh–Nagumo model](https://en.wikipedia.org/wiki/FitzHugh%E2%80%93Nagumo_model) (for no particular reason but that it is slightly more complex than the original Turing model) resulting in the following equations:\n",
     "\n",
     "$\\frac{\\delta a}{\\delta t} = \\mu_a\\nabla a + a - a^3 - i + k$ [1]\n",
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## So we aim at writting a class that produces the following output\n",
+    "## So we aim at writing a class that produces the following output\n",
     "<img src=\"../Images/My-first-Turing-Pattern.gif\" alt=\"First Turing Pattern\" width=\"200\"/>"
    ]
   },
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercice"
+    "### Exercise"
    ]
   },
   {
@@ -203,7 +203,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sandbox",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -217,9 +217,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.12"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
