--- a/notebooks/5.Turing_no_space.ipynb
+++ b/notebooks/5.Turing_no_space.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "Using the class scafold below (or another one if you prefer), create a class that models the activator equation in one cell (so without diffusion) and without any inhibitor, in other words, [1] becomes:\n",
+    "Using the class scaffold below (or another one if you prefer), create a class that models the activator equation in one cell (so without diffusion) and without any inhibitor, in other words, [1] becomes:\n",
     "\n",
     "$$\\frac{\\delta a}{\\delta t} = a - a^3 + k$$\n",
     "\n",
@@ -63,14 +63,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## No space, and 2 independant ligands"
+    "## No space, and 2 independent ligands"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the class scafold below (or another one if you prefer), create a class that models the activator and inhibitor equations in one cell (so without diffusion) such that they are independant from each others.\n",
+    "Using the class scaffold below (or another one if you prefer), create a class that models the activator and inhibitor equations in one cell (so without diffusion) such that they are independent from each others.\n",
     "In other words, [1] becomes:\n",
     "\n",
     "$$\\frac{\\delta a}{\\delta t} = a - a^3 + k$$\n",
@@ -108,14 +108,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## No space and two interdependants ligands"
+    "## No space and two interdependent ligands"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the class scafold below (or another one if you prefer), create a class that models the activator and inhibitor equations in one cell (so without diffusion) such that they are dependant from each others.\n",
+    "Using the class scaffold below (or another one if you prefer), create a class that models the activator and inhibitor equations in one cell (so without diffusion) such that they are dependent from each others.\n",
     "In other words, [1] becomes:\n",
     "\n",
     "$$\\frac{\\delta a}{\\delta t} = a - a^3 - i + k$$\n",
@@ -158,7 +158,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sandbox",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -172,9 +172,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.12"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
