--- a/notebooks/6.Modeling_diffusion.ipynb
+++ b/notebooks/6.Modeling_diffusion.ipynb
@@ -105,7 +105,7 @@
     "a_{x, t+\\delta t} = a_{x, t} + \\delta t . \\mu_a . \\frac{a_{x-\\delta x, t} + a_{x+\\delta x, t} - 2a_{x, t}}{\\delta x}\n",
     "$$\n",
     "\n",
-    "<img src=\"../Images/Diffusion.png\" alt=\"Diffusion\" width=\"1000\"/>\n"
+    "<img src=\"../Images/Diffusion.png\" alt=\"Diffusion\" width=\"500\"/>\n"
    ]
   },
   {
@@ -248,7 +248,7 @@
     "\n",
     "And to compute the $\\sum Neighbs~concentration$ we can also use a convolution:\n",
     "\n",
-    "<img src=\"../Images/diffusion.png\" alt=\"Diffusion\" width=\"500\"/>\n",
+    "<img src=\"../Images/ConvolDiffusion.png\" alt=\"Diffusion\" width=\"1000\"/>\n",
     "\n",
     "You now have everything you need"
    ]
