--- a/notebooks/6.Modeling_diffusion.ipynb
+++ b/notebooks/6.Modeling_diffusion.ipynb
@@ -274,6 +274,31 @@
     "...\n",
     "model.plot_reactions()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from turing_models import TuringInit\n",
+    "import numpy as np\n",
+    "\n",
+    "a = TuringInit()\n",
+    "a.A = np.random.random((100, 200, 200))\n",
+    "a.save3D(\"test.gif\", nb_steps=2)\n",
+    "\n",
+    "# nb_steps = 50\n",
+    "# self = a\n",
+    "# min_ = self.A.min()\n",
+    "# max_ = self.A.max()\n",
+    "# normed = (self.A - min_)/(max_ - min_) * 255\n",
+    "# step_size = max(1, normed.shape[0]//nb_steps)\n",
+    "# print(normed.shape, step_size)\n",
+    "# normed.shape[0]//nb_steps\n",
+    "# normed[::step_size].T.shape\n",
+    "# # mimsave(file_path, normed[::step_size].T.astype(\"uint8\"), duration=duration)"
+   ]
   }
  ],
  "metadata": {
