--- a/notebooks/4.Preparing_Turing.ipynb
+++ b/notebooks/4.Preparing_Turing.ipynb
@@ -146,14 +146,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "self.mu_a = 0.00028\n",
+      "self.mu_i = 0.005\n",
+      "self.tau = 0.1\n",
+      "self.k = -0.005\n",
+      "self.size = 200\n",
+      "self.dx = 0.01\n",
+      "self.dy = 0.01\n",
+      "self.T = 9\n",
+      "self.dt = 0.001\n",
+      "self.n = 9000 \n",
+      "\n",
+      "self.mu_a = 10\n",
+      "self.mu_i = 0.005\n",
+      "self.tau = 1\n",
+      "self.k = -0.005\n",
+      "self.size = 200\n",
+      "self.dx = 0.01\n",
+      "self.dy = 0.01\n",
+      "self.T = 10\n",
+      "self.dt = 0.001\n",
+      "self.n = 9000 \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your class below\n",
     "class Turing:\n",
-    "    def __init__(self, *args, **kwargs):\n",
-    "        ...\n",
+    "    def __str__(self):\n",
+    "        \"\"\" Note that it will print `self.mu_a = [...]`\n",
+    "        but I am a bit lazy and that will do :/\n",
+    "        \"\"\"\n",
+    "        return (\n",
+    "            f\"{self.mu_a = }\\n\"\n",
+    "            f\"{self.mu_i = }\\n\"\n",
+    "            f\"{self.tau = }\\n\"\n",
+    "            f\"{self.k = }\\n\"\n",
+    "            f\"{self.size = }\\n\"\n",
+    "            f\"{self.dx = }\\n\"\n",
+    "            f\"{self.dy = }\\n\"\n",
+    "            f\"{self.T = }\\n\"\n",
+    "            f\"{self.dt = }\\n\"\n",
+    "            f\"{self.n = } \\n\"\n",
+    "        )\n",
+    "\n",
+    "    def __init__(\n",
+    "            self,\n",
+    "            mu_a=0.00028,\n",
+    "            mu_i=0.005,\n",
+    "            tau=0.1,\n",
+    "            k=-0.005,\n",
+    "            size=200 ,\n",
+    "            T=9,\n",
+    "            dt=0.001,\n",
+    "            # Note the absence of `n`, `dx` and `dy` as they are related to other variables\n",
+    "        ):\n",
+    "        self.mu_a = mu_a\n",
+    "        self.mu_i = mu_i\n",
+    "        self.tau = tau\n",
+    "        self.k = k\n",
+    "        self.size = size\n",
+    "        self.dx = 2/size\n",
+    "        self.dy = 2/size\n",
+    "        self.T = T\n",
+    "        self.dt = dt\n",
+    "        self.n = T/dt\n",
     "\n",
     "\n",
     "model_1 = Turing()\n",
@@ -173,9 +238,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Turing model class:\n",
+      "\tmu_a = 0.00028\n",
+      "\tmu_i = 0.005\n",
+      "\ttau = 0.1\n",
+      "\tk = -0.005\n",
+      "\tsize = 200\n",
+      "\tdx = 0.01\n",
+      "\tdy = 0.01\n",
+      "\tT = 9\n",
+      "\tdt = 0.001\n",
+      "\tn = 9000\n",
+      "\n",
+      "Turing model class:\n",
+      "\tmu_a = 10\n",
+      "\tmu_i = 0.005\n",
+      "\ttau = 0.1\n",
+      "\tk = -0.005\n",
+      "\tsize = 200\n",
+      "\tdx = 0.01\n",
+      "\tdy = 0.01\n",
+      "\tT = 9\n",
+      "\tdt = 0.001\n",
+      "\tn = 9000\n",
+      "\n",
+      "model.dt, model.dx, model.tau = (0.001, 0.01, 0.1)\n"
+     ]
+    }
+   ],
    "source": [
     "from turing_models import TuringInit\n",
     "\n",
@@ -217,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
