--- a/notebooks/5.Turing_no_space.ipynb
+++ b/notebooks/5.Turing_no_space.ipynb
@@ -44,14 +44,18 @@
    "outputs": [],
    "source": [
     "from turing_models import TuringInit\n",
+    "import numpy as np\n",
     "\n",
     "\n",
     "class Turing(TuringInit):\n",
     "    def reaction(self):\n",
-    "        ...\n",
+    "        for t in range(self.n-1):\n",
+    "            a = self.A[t]\n",
+    "            self.A[t+1] = a - a**3 + self.k\n",
     "\n",
     "    def __init__(self, **kwargs):\n",
     "        super().__init__(**kwargs)\n",
+    "        self.A = np.zeros(self.n)\n",
     "\n",
     "\n",
     "model = Turing()\n",
