few local modif

--- a/notebooks/4.Preparing_Turing.ipynb
+++ b/notebooks/4.Preparing_Turing.ipynb
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
       "self.dy = 0.01\n",
       "self.T = 10\n",
       "self.dt = 0.001\n",
-      "self.n = 9000 \n",
+      "self.n = 10000 \n",
       "\n"
      ]
     }
@@ -218,7 +218,7 @@
     "        self.dy = 2/size\n",
     "        self.T = T\n",
     "        self.dt = dt\n",
-    "        self.n = T/dt\n",
+    "        self.n = int(T/dt)\n",
     "\n",
     "\n",
     "model_1 = Turing()\n",
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -250,26 +250,27 @@
       "\tmu_i = 0.005\n",
       "\ttau = 0.1\n",
       "\tk = -0.005\n",
-      "\tsize = 200\n",
-      "\tdx = 0.01\n",
-      "\tdy = 0.01\n",
+      "\tsize = 100\n",
       "\tT = 9\n",
       "\tdt = 0.001\n",
-      "\tn = 9000\n",
+      "\tn = <property object at 0x106ad6ae0>\n",
+      "\tdx = <property object at 0x10de54ae0>\n",
+      "\tdy = <property object at 0x10de54b30>\n",
       "\n",
       "Turing model class:\n",
       "\tmu_a = 10\n",
       "\tmu_i = 0.005\n",
       "\ttau = 0.1\n",
       "\tk = -0.005\n",
-      "\tsize = 200\n",
-      "\tdx = 0.01\n",
-      "\tdy = 0.01\n",
+      "\tsize = 100\n",
       "\tT = 9\n",
       "\tdt = 0.001\n",
-      "\tn = 9000\n",
+      "\tn = <property object at 0x106ad6ae0>\n",
+      "\tdx = <property object at 0x10de54ae0>\n",
+      "\tdy = <property object at 0x10de54b30>\n",
       "\n",
-      "model.dt, model.dx, model.tau = (0.001, 0.01, 0.1)\n"
+      "\n",
+      "model.dt, model.dx, model.tau = (0.001, 0.02, 0.1)\n"
      ]
     }
    ],
