--- a/notebooks/4.Preparing_Turing.ipynb
+++ b/notebooks/4.Preparing_Turing.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -257,6 +257,7 @@
       "\tdx = <property object at 0x10de54ae0>\n",
       "\tdy = <property object at 0x10de54b30>\n",
       "\n",
+      "\n",
       "Turing model class:\n",
       "\tmu_a = 10\n",
       "\tmu_i = 0.005\n",
@@ -270,14 +271,15 @@
       "\tdy = <property object at 0x10de54b30>\n",
       "\n",
       "\n",
-      "model.dt, model.dx, model.tau = (0.001, 0.02, 0.1)\n"
+      "model.dt, model.dx, model.tau = (0.001, 10, 0.1)\n"
      ]
     }
    ],
    "source": [
     "from turing_models import TuringInit\n",
     "\n",
-    "\n",
+    "# Note that dx, dy and n are not instanciated directly since they are dependant on other values\n",
+    "# As soon as they are needed (called), they are instanciatied\n",
     "class Turing(TuringInit):\n",
     "    def __init__(self, **kwargs):\n",
     "        super().__init__(**kwargs)\n",
@@ -286,7 +288,7 @@
     "model = Turing()\n",
     "print(model)\n",
     "\n",
-    "model = Turing(mu_a=10)\n",
+    "model = Turing(mu_a=10, dx=10)\n",
     "print(model)\n",
     "print(f\"{model.dt, model.dx, model.tau = }\")"
    ]
