--- a/notebooks/6.Modeling_diffusion.ipynb
+++ b/notebooks/6.Modeling_diffusion.ipynb
@@ -308,7 +308,8 @@
     "\n",
     "    def diffusion(self, arr, mu):\n",
     "        income = convolve(arr, self.kernel, mode='constant', cval=0)\n",
-    "        return mu * (income - self.neighbours*arr) / (self.dx * self.dy)\n",
+    "        outcome = self.neighbours*arr\n",
+    "        return mu * (income - outcome) / (self.dx * self.dy)\n",
     "    \n",
     "    def reaction_A(self, a, i):\n",
     "        return a - a**3 - i + self.k\n",
@@ -373,6 +374,7 @@
     }
    ],
    "source": [
+    "# Using a different set of parameters\n",
     "model = Turing(\n",
     "    mu_a = 2.8e-4,\n",
     "    mu_i = 5e-3,\n",
